[package]
name = "pushrod"
version = "0.5.0"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod UI Library - Widgets"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/pushrod-widgets/"
documentation = "http://docs.rs/crate/pushrod-widgets/"
keywords = ["sdl", "sdl2", "pushrod", "ui", "gui"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "pushrod"
path = "src/lib.rs"

[dependencies.sdl2]
version = "^0.34.5"
features = ["ttf", "image", "unsafe_textures"]

